Making java8 compatible (#374)